# Nano-Flow-TTS

./: .gitignore  Cargo.toml  README.md  run_preprocess.ps1  run_train.ps1  メモ.txt
crates/nflow-core/: Cargo.toml
crates/nflow-core/src/: lib.rs
crates/nflow-model/: Cargo.toml
crates/nflow-model/src/: decoder.rs  encoder.rs  lib.rs
crates/nflow-synth/: Cargo.toml
crates/nflow-synth/src/: lib.rs  main.rs  vocoder.rs
crates/nflow-text/: Cargo.toml
crates/nflow-text/src/: lib.rs  main.rs
crates/nflow-train/: Cargo.toml
crates/nflow-train/src/: dataset.rs  main.rs  prepare.rs  preprocess.rs
tools/kokoro-downloader/: Cargo.toml
tools/kokoro-downloader/src/: main.rs
