[package]
name = "nflow-synth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nflow-core = { path = "../nflow-core" }
nflow-model = { path = "../nflow-model" }
candle-core = "0.8"
candle-nn = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5.1"
rand = "0.9.2"
rustfft = "6.4.1"

