[package]
name = "nflow-text"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nflow-core = { path = "../nflow-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vibrato = "0.5"
jpreprocess = { version = "0.12", features = ["naist-jdic"] }
anyhow = "1.0"

[[bin]]
name = "nflow-text"
path = "src/main.rs"
