[package]
name = "nflow-train"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nflow-core = { path = "../nflow-core" }
nflow-model = { path = "../nflow-model" }
candle-core = "0.8"
candle-nn = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokenizers = "0.19"
tempfile = "3.10"
hound = "3.5.1"
rustfft = "6.4.1"
glob = "0.3.3"
rand = "0.9"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
nflow-text = { path = "../nflow-text" }

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]



