[package]
name = "kokoro-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6"
futures-util = "0.3"
indicatif = "0.17"
symphonia = { version = "0.5", features = ["mp3", "pcm", "all-codecs", "all-formats"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hound = "3.5"
clap = { version = "4.5", features = ["derive"] }
